Fix vertical overflow of login form

--- a/aiarena/frontend/static/style.css
+++ b/aiarena/frontend/static/style.css
@@ -906,11 +906,12 @@ tr:hover a:focus {
     padding-top: 10px;
     padding-left: 30px;
     padding-bottom: 20px;
-    height: 210px;
+    overflow: auto;
 }
 
 .form-box {
     float: left;
+    max-width: 400px;
 }
 
 #pw-reset {
